UserProgress added. Start course implemented.