@@ -3,13 +3,12 @@ package learnEnglish.repository.impl;
 import learnEnglish.entity.Question;
 import learnEnglish.repository.QuestionRepository;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class QuestionRepositoryImpl implements QuestionRepository {
-    private static String[] variants = {"I am a Jira","I am a Pisos","I am a Human","I am Dolbich"};
-    private static Question questionHardcoded = new Question(41001, "Who are you?","I am a Human", variants, false, 1);
-    private static List<Question> questions = Arrays.asList(questionHardcoded);
+    private static final String[] variants = {"0) I am a Jira","1) I am a Ramen","2) I am a Human","3) I am USA Navy"};
+    private static final Question questionHardcoded = new Question(41001, "Who are you?",2, variants, 1);
+    private static final List<Question> questions = List.of(questionHardcoded);
 
     @Override
     public Question getQuestion() {
@@ -24,5 +23,10 @@ public class QuestionRepositoryImpl implements QuestionRepository {
     @Override
     public List<Question> getAllQuestion() {
         return questions;
+    }
+
+    @Override
+    public List<Question> getAllQuestionByQuizzId(int id) {
+        return questions.stream().filter(question -> question.getQuizId() == id).toList();
     }
 }
